# speakinput

./: .gitignore  README.md  TODO.md  config.example.toml  config.toml  pyproject.toml  release.sh  setup.sh  speakinput.spec  start.sh
src/speakinput/: __init__.py  __main__.py  _feedback_rumps.py  app.py  audio.py  cli.py  config.py  feedback.py  hotkey.py  injector.py  media.py  models.py  silence.py  singleinstance.py  transcriber.py
tests/: conftest.py  test_app.py  test_audio.py  test_cli.py  test_config.py  test_hotkey.py  test_injector.py  test_models.py  test_silence.py  test_singleinstance.py  test_transcriber.py
